--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <!-- <link rel="stylesheet" href="/src/assets/monument-grotesk-regular.otf"> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap" rel="stylesheet">
-    <title>websitetwo</title>
+    <title>Advait Kalakkad</title>
   </head>
   <body>
     <noscript>
